spring-boot-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-svc
spec:
  selector:
    app: spring
  ports:
    - port: 8080
      targetPort: 8080
