spring-boot-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress
spec:
  ingressClassName: "nginx"
  rules:
    - host: "springboot.chasecup.com"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: spring-svc
              port:
                number: 8080
